# risk-regime-bro

./: .gitignore  README.md  pyproject.toml
docs/reference/: success.md
scripts/: dev.sh
src/risk_regime_bro/: main.py  market_data.py  risk_engine.py
tests/: reproduce_drawdown.py  test_full_coverage.py  test_risk_math.py
