[project]
name = "risk-regime-bro"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "requests>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.20.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
fix = true

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = false
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
